fix footer overflow on mobile

--- a/client/src/styles/footer.scss
+++ b/client/src/styles/footer.scss
@@ -2,4 +2,7 @@
   gap: 1rem;
   padding-bottom: 1rem;
   a { color: white; }
+
+  width: 100%;
+  overflow-x: scroll;
 }
