--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -32,7 +32,12 @@
 
 // layout
 body { margin: 0; }
-.app > .col { min-height: 100vh; min-width: 100vw;}
+.app > .col {
+  min-height: 100vh;
+  min-width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 .page { padding:1rem; max-width: 60rem; }
 .page h2 { margin-top: 1rem; }
 
